kubernetes/cluster/envoy-gateway/config/jellyfin-iot-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-iot
  annotations:
    lbipam.cilium.io/ips: 192.168.1.22
spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false
  externalTrafficPolicy: Cluster
  ipFamilyPolicy: SingleStack
  ipFamilies: [IPv4]
  selector:
    gateway.envoyproxy.io/owning-gateway-name: envoy-proxy
    gateway.envoyproxy.io/owning-gateway-namespace: kube-system
    app.kubernetes.io/component: proxy
  ports:
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
