kubernetes/cluster/envoy-gateway/config/towonel-public-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: towonel-public
spec:
  type: ClusterIP
  selector:
    gateway.envoyproxy.io/owning-gateway-name: envoy-proxy
    gateway.envoyproxy.io/owning-gateway-namespace: kube-system
    app.kubernetes.io/component: proxy
  ports:
    - name: https
      port: 443
      targetPort: 8444
      protocol: TCP
